--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,9 +21,13 @@ menu:
     - name: 문서
       pageRef: /docs
       weight: 1
+    - name: 검색
+      params:
+        type: search
+      weight: 2
     - name: GitHub
       url: "https://github.com/hbl03/RBLN"
-      weight: 2
+      weight: 3
       params:
         icon: github
 
